--- a/Q-and-A/Q-and-A/Base.lproj/Main.storyboard
+++ b/Q-and-A/Q-and-A/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4TM-5E-ZbP">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4TM-5E-ZbP">
                                                     <rect key="frame" x="0.0" y="56" width="43" height="20"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -116,28 +116,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="sAe-NM-f5z">
-                                <rect key="frame" x="0.0" y="116" width="375" height="333.5"/>
+                                <rect key="frame" x="16" y="132" width="343" height="333.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="epc-vn-x4G">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4a0-BB-qBD">
-                                        <rect key="frame" x="0.0" y="28.5" width="375" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="28.5" width="343" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M5r-np-3kI">
-                                        <rect key="frame" x="0.0" y="57" width="375" height="30"/>
+                                        <rect key="frame" x="0.0" y="57" width="343" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Xkh-yB-9E8">
-                                        <rect key="frame" x="0.0" y="95" width="375" height="238.5"/>
+                                        <rect key="frame" x="0.0" y="95" width="343" height="238.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -148,9 +148,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Aef-FG-nau" firstAttribute="trailing" secondItem="sAe-NM-f5z" secondAttribute="trailing" id="3Z1-u3-ei1"/>
-                            <constraint firstItem="sAe-NM-f5z" firstAttribute="top" secondItem="Aef-FG-nau" secondAttribute="top" id="6VS-Nb-YQq"/>
-                            <constraint firstItem="sAe-NM-f5z" firstAttribute="leading" secondItem="Aef-FG-nau" secondAttribute="leading" id="M7N-7Y-OdR"/>
+                            <constraint firstItem="Aef-FG-nau" firstAttribute="trailing" secondItem="sAe-NM-f5z" secondAttribute="trailing" constant="16" id="3Z1-u3-ei1"/>
+                            <constraint firstItem="sAe-NM-f5z" firstAttribute="top" secondItem="Aef-FG-nau" secondAttribute="top" constant="16" id="6VS-Nb-YQq"/>
+                            <constraint firstItem="sAe-NM-f5z" firstAttribute="leading" secondItem="Aef-FG-nau" secondAttribute="leading" constant="16" id="M7N-7Y-OdR"/>
                             <constraint firstItem="sAe-NM-f5z" firstAttribute="height" secondItem="Q0j-fR-3D0" secondAttribute="height" multiplier="1/2" id="hNA-xZ-Oo8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Aef-FG-nau"/>
@@ -173,7 +173,7 @@
             </objects>
             <point key="canvasLocation" x="1687" y="282"/>
         </scene>
-        <!--Title-->
+        <!--Ask a Question-->
         <scene sceneID="9QF-Ta-U0M">
             <objects>
                 <viewController id="0Ed-KK-d95" customClass="AskQuestionViewController" customModule="Q_and_A" customModuleProvider="target" sceneMemberID="viewController">
@@ -182,14 +182,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6jW-PR-1hG">
-                                <rect key="frame" x="0.0" y="170" width="375" height="128"/>
+                                <rect key="frame" x="16" y="170" width="343" height="80"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="I7k-wE-ueV"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I1q-zq-uVL">
-                                <rect key="frame" x="0.0" y="132" width="375" height="30"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I1q-zq-uVL">
+                                <rect key="frame" x="16" y="132" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -197,16 +199,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="RQX-yC-W0q" firstAttribute="trailing" secondItem="I1q-zq-uVL" secondAttribute="trailing" id="GrW-YX-NDB"/>
-                            <constraint firstItem="6jW-PR-1hG" firstAttribute="leading" secondItem="RQX-yC-W0q" secondAttribute="leading" id="XGx-fS-Xh8"/>
-                            <constraint firstItem="RQX-yC-W0q" firstAttribute="trailing" secondItem="6jW-PR-1hG" secondAttribute="trailing" id="cKi-R7-nQY"/>
-                            <constraint firstItem="I1q-zq-uVL" firstAttribute="leading" secondItem="RQX-yC-W0q" secondAttribute="leading" id="idg-Hg-PP5"/>
+                            <constraint firstItem="RQX-yC-W0q" firstAttribute="trailing" secondItem="I1q-zq-uVL" secondAttribute="trailing" constant="16" id="GrW-YX-NDB"/>
+                            <constraint firstItem="6jW-PR-1hG" firstAttribute="leading" secondItem="RQX-yC-W0q" secondAttribute="leading" constant="16" id="XGx-fS-Xh8"/>
+                            <constraint firstItem="RQX-yC-W0q" firstAttribute="trailing" secondItem="6jW-PR-1hG" secondAttribute="trailing" constant="16" id="cKi-R7-nQY"/>
+                            <constraint firstItem="I1q-zq-uVL" firstAttribute="leading" secondItem="RQX-yC-W0q" secondAttribute="leading" constant="16" id="idg-Hg-PP5"/>
                             <constraint firstItem="I1q-zq-uVL" firstAttribute="top" secondItem="RQX-yC-W0q" secondAttribute="top" constant="16" id="ujz-7m-abF"/>
                             <constraint firstItem="6jW-PR-1hG" firstAttribute="top" secondItem="I1q-zq-uVL" secondAttribute="bottom" constant="8" id="xNC-h6-w5Z"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RQX-yC-W0q"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="H4V-aW-sOg">
+                    <navigationItem key="navigationItem" title="Ask a Question" id="H4V-aW-sOg">
                         <barButtonItem key="rightBarButtonItem" title="Submit Question" id="sOt-UD-ZVO">
                             <connections>
                                 <action selector="submitQuestion:" destination="0Ed-KK-d95" id="eSK-a1-nwn"/>
@@ -220,7 +222,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WXU-xb-QdV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1682" y="-527"/>
+            <point key="canvasLocation" x="1680.8" y="-527.58620689655174"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ENO-IW-mrg">
