--- a/Q&A/Q&A/Base.lproj/Main.storyboard
+++ b/Q&A/Q&A/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="145" id="oAd-qM-g95" customClass="QuestionTableViewCell" customModule="Q_A" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="QuestionCell" rowHeight="145" id="oAd-qM-g95" customClass="QuestionTableViewCell" customModule="Q_A" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="145"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oAd-qM-g95" id="sLR-Zc-UBv">
@@ -96,7 +96,7 @@
                     <navigationItem key="navigationItem" title="Q&amp;A" id="i2W-Kx-M2F">
                         <barButtonItem key="rightBarButtonItem" title="Ask Question" id="fik-yb-DEo">
                             <connections>
-                                <segue destination="sXw-Fh-Sr0" kind="show" id="MBz-cm-60s"/>
+                                <segue destination="sXw-Fh-Sr0" kind="show" identifier="AskQuestion" id="MBz-cm-60s"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -108,7 +108,7 @@
         <!--Title-->
         <scene sceneID="eVX-dJ-vUY">
             <objects>
-                <viewController id="sXw-Fh-Sr0" sceneMemberID="viewController">
+                <viewController id="sXw-Fh-Sr0" customClass="AskQuestionViewController" customModule="Q_A" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0Vo-2A-mcD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -140,8 +140,16 @@
                         <viewLayoutGuide key="safeArea" id="4Db-3l-Qsn"/>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="gUO-Kl-8JA">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="ZsJ-RL-n0Y"/>
+                        <barButtonItem key="rightBarButtonItem" title="Submit Question" id="ZsJ-RL-n0Y">
+                            <connections>
+                                <action selector="submitQuestion:" destination="sXw-Fh-Sr0" id="faU-iH-bpv"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="questionTextField" destination="rsY-14-bRz" id="Y4f-fy-Gex"/>
+                        <outlet property="questionTextView" destination="g3R-NA-cfr" id="wYd-Al-U2n"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jYM-bt-NU1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
